<resources>
    <string name="app_name">Connect</string>
    <string name="dashboard_message">What Your Friends are Looking for?</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="auto_insurance">Auto Insurance</string>
    <string name="auto_finance">Auto Finance</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="life_insurance">Life Insurance</string>
    <string name="home_insurance">Home Insurance</string>
    <string name="new_car">New Car</string>

    <string name="in_progress">In Progress</string>
    <string name="verification_done">Reference Verified</string>
    <string name="active">Active</string>
    <string name="sold">Sold</string>
    <string name="expired">Expired</string>
    <string name="user_denied">User Not Interested</string>

    <string name="filter_leads">Filter Leads</string>
    <string name="filter_revenue_history">Filter Revenue History</string>
    <string name="filter_add_refer">Add Refer Code</string>
    <string name="lead_history_title">Lead History</string>
    <string name="commission_history_title">Commission History</string>
    <string name="my_profile_title">My Profile</string>

    <!-- Drawer Menu Items -->
    <string name="home">HOME</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="lead_history">LEAD HISTORY</string>
    <string name="redeem_revenue">REDEEM MONEY</string>
    <string name="transaction_history">PAYMENT HISTORY</string>
    <string name="my_commission">MY COMMISSION HISTORY</string>
    <string name="share_and_earn">SHARE AND EARN</string>
    <string name="help">HELP</string>
    <string name="logout">LOGOUT</string>

    <string name="share_and_earn_info">Share Your Refer Code with Friends and Earn 10% Commission om Your Leads</string>
    <string name="shake_to_share_info">Just Shake To Share Your Refer Code With Friends!!!</string>

    <!--<string name="custom_progress_bar_colors">#F14336_#ffffff_#5677fc_#F44336_#4CAF50</string>-->
    <string name="custom_progress_bar_colors">#673AB7_#E91E63_#2196F3_#FF5722_#795548</string>


    <string name="facebook_app_id">978921992200010</string>
    <!--<string name="google_client_id">AIzaSyAa4EDPzxccmJi4gaOL6S46rvX_AQNoCYo</string>-->
    <string name="google_client_id">AIzaSyDJPIurl5-3kcOp18pG2UDC2FQLquXojxg</string>

    <!--<string name="project_id">732099720034</string>-->
    <string name="project_id">372519544611</string>

    <!-- User Messages -->
    <string name="facebook_connection_cancelled">Facebook Connection Cancelled</string>
    <string name="facebook_connection_failed">Facebook Connection Failed</string>
    <string name="facebook_connection_error">Error Encountered While Login via Facebook</string>
    <string name="google_connection_failed">Google Connection Failed</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="success">Success</string>
    <string name="gcm_error">Google Services Not Found. Please Install/Update It</string>
    <string name="login_failed">Error Was Encountered While Login. Please Try Again.</string>
    <string name="login_successful">Login Successful</string>
    <string name="name_empty_validation">Name Cannot Be Empty</string>
    <string name="email_empty_validation">Email Cannot Be Empty</string>
    <string name="dob_empty_validation">Date Of Birth Cannot Be Empty</string>
    <string name="zipcode_empty_validation">Zipcode Cannot Be Empty</string>
    <string name="industry_empty_validation">Industry Cannot Be Empty. Please Choose From Available List</string>
    <string name="address_empty_validation">Address Cannot Be Empty</string>
    <string name="street_no_empty_validation">Street Cannot Be Empty</string>
    <string name="email_invalid_validation">Invalid Email Id</string>
    <string name="mobile_mandatory_validation">Contact No. Cannot Be Empty</string>
    <string name="mobile_invalid_validation">Invalid Mobile No.</string>
    <string name="no_industry_found">No Such Indutry Found</string>
    <string name="refer_code_entry_text">Do You Have Your Friend\'s Refer Code?</string>
    <string name="update_user_error">Error Was Encountered. Please Try Again.</string>
    <string name="update_user_failed">Update Failed. Please Try Again.</string>
    <string name="update_user_success">Profile Updated Successfully</string>
    <string name="post_lead_terms_message">If you post a lead your reference will receive a call and email from us for further procedure</string>
    <string name="click_for_terms_conditions_message">Click here to view our Terms And Conditions</string>
    <string name="post_lead_terms_decline">Your lead cannot be processed. Please go through out terms and conditions for further information.</string>
    <string name="post_lead_failed">Error Was Encountered While Posting Lead. Please Try Again.</string>
    <string name="post_lead_successful">Lead Posted Successfully. Email &amp; SMS sent to your reference.</string>
    <string name="no_internet_connection">No Internet Found. Please Try Again.</string>

    <string name="no_lead_history_found">Oops! we couldn\'t find lead history for you.</string>
    <string name="no_commission_history_found">Oops! we couldn\'t find commission history for you.</string>
    <string name="no_more_data">No More Data Found.</string>
    <string name="contact_not_picker">Contact Cannot Be Picked. Please Enter Contact Details</string>

    <!-- Buttons and static screens-->
    <string name="hint_industry">Enter Industry</string>
    <string name="hint_full_name">Enter Full Name</string>
    <string name="hint_phone">Enter Contact Number</string>
    <string name="hint_email">Enter Email Id</string>
    <string name="hint_zipcode">Enter Zipcode</string>
    <string name="hint_address">Enter Address</string>
    <string name="hint_street_no">Enter Street Number</string>
    <string name="hint_dob">Enter Date Of Birth</string>

    <string name="Decline">Decline</string>
    <string name="Accept">Accept</string>
    <string name="hint_keyword">Search By Reference Contact Name or Number</string>
    <string name="hint_name">Search By Name</string>
    <string name="hint_contact">Search By Contact No.</string>
    <string name="search_verticals">Search By Verticals</string>
    <string name="search_lead_status">Search By Lead Status</string>
    <string name="add_refer_code">Add Refer Code</string>
    <string name="cancel">Cancel</string>

    <string name="No">No, I don\'t have</string>
    <string name="Yes">Yes, I have</string>
    <!-- Codes -->
    <string name="success_response_message">Successful</string>
    <string name="success_response_code">1</string>


    <string name="error_start_date">Start Date Cannot Be After End Date</string>
    <string name="error_end_date">End Date Cannot Be Before Start Date</string>



</resources>
