<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearVerticalCheckListRow1"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="left"
        android:weightSum="2"
        android:layout_margin="@dimen/margin_10"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkboxInProgress"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/in_progress" />

        <CheckBox
            android:id="@+id/checkboxVerificationDone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/verification_done" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearVerticalCheckListRow2"
        android:layout_margin="@dimen/margin_10"
        android:layout_gravity="center"
        android:gravity="left"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkboxActive"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/active" />

        <CheckBox
            android:id="@+id/checkboxSold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearVerticalCheckListRow3"
        android:layout_margin="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="left"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkboxExpired"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/expired" />

        <CheckBox
            android:id="@+id/checkboxUserNotInterested"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/user_denied" />
    </LinearLayout>
</LinearLayout>