<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/std_margin"
        android:padding="@dimen/small_margin"
        android:text="@string/refer_code_entry_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_normal_text_size" />

    <com.jungly.gridpasswordview.GridPasswordView
        android:id="@+id/edtReferCode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/final_profile_image"
        android:layout_margin="@dimen/std_margin"
        app:gpvGridColor="#ffffff"
        app:gpvLineColor="#d4d4d4"
        app:gpvLineWidth="1dp"
        app:gpvPasswordLength="6"
        app:gpvPasswordType="textVisiblePassword"
        app:gpvTextColor="@color/colorAccent"
        app:gpvTextSize="@dimen/normal_text_size">

    </com.jungly.gridpasswordview.GridPasswordView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/v_large_margin"
        android:gravity="right">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReferCode"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes" />


    </LinearLayout>

</LinearLayout>