<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/std_margin"
            android:padding="@dimen/small_margin"
            android:text="@string/filter_leads"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_large_text_size" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtKeyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:hint="@string/hint_keyword"
                android:inputType="text"
                android:textSize="@dimen/small_normal_text_size"
                app:met_baseColor="@color/colorPrimary"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/primaryTextColor"
                app:met_textColorHint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/std_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_weight="1"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:textSize="@dimen/small_normal_text_size"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/primaryTextColor"
                    app:met_textColorHint="@color/colorPrimary" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_weight="1"
                    android:hint="@string/hint_contact"
                    android:inputType="text"
                    android:textSize="@dimen/small_normal_text_size"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/primaryTextColor"
                    app:met_textColorHint="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/std_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="Start Date"
                    android:inputType="text"
                    android:textSize="@dimen/small_normal_text_size"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/primaryTextColor"
                    app:met_textColorHint="@color/colorPrimary" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/editEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="End Date"
                    android:inputType="text"
                    android:textSize="@dimen/small_normal_text_size"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/primaryTextColor"
                    app:met_textColorHint="@color/colorPrimary" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/std_margin"
                android:padding="@dimen/small_margin"
                android:text="@string/search_verticals"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/small_normal_text_size" />

            <include
                android:id="@+id/verticalList"
                layout="@layout/vertical_items_checklist" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
       android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/std_margin"
        android:gravity="right">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnFilter"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />

    </LinearLayout>
</RelativeLayout>